--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h3>Color Flippa</h3>
-    <img src="/Pics/pog.png" id="pog" />
+    <img src="Pics/pog.png" id="pog" />
     <button id="Red" onclick="setColor('red')">Red</button>
     <button id="Green" onclick="setColor('greenyellow')">Green</button>
     <button id="Blue" onclick="setColor('blue')">Blue</button>
@@ -18,3 +18,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
