--- a/Flipper.html
+++ b/Flipper.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h3>Color Flippa</h3>
-    <img src="pog.png" id="pog" />
+    <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi0.wp.com%2Fwww.specser.com%2Fwp-content%2Fuploads%2F2021%2F10%2FWhat-Does-Poggers-Mean-How-to-Use-Poggers-Online.jpg%3Fresize%3D465%252C465%26ssl%3D1&f=1&nofb=1&ipt=1867758bd2295d939afe2792df9e93adb143d20be991ed3ee3947f9f82c97132" id="pog" />
     <button id="Red" onclick="setColor('red')">Red</button>
     <button id="Green" onclick="setColor('greenyellow')">Green</button>
     <button id="Blue" onclick="setColor('blue')">Blue</button>
@@ -17,4 +17,5 @@
     <input type="text" id="colorBox" placeholder="Your color is: ">
     <script src="script.js"></script>
 </body>
+
 </html>
